# estagio_gestao_documental

./: MIGRATION_NOTES.md  README.md  todo.md  todo.txt
backend/: .env  Cargo.toml  README.md  dev.ps1  dev.sh  migrate.sh  release.sh
backend/.sqlx/: query-004caa54825fc7ef7826ddf9c2aa8c40acbed4b3b37979ab9b14078ed4bed295.json  query-0142d283d4957952b76ed41738dd88f62b901a2d54e4f5185f62668490b7d0b2.json  query-062a62a2e2c4f52625de61ecb6cff2eb4431277d27c8af1026f7adc28e6ebdfa.json  query-06d3fd1c4ecf7adec879f01356dcda704aa21fdb0972e790b5c1aac8ca9da07c.json  query-094b6817996ae0f556408afc39579edff89e2dd4d570df07495c476f77d3c584.json  query-099e47902591af65b55fb28d6962d749e8c2402f0a3d60f57700e6b5554d5f81.json  query-11024c5afe383794cf61517f38ff8a4c4aaa983e4e096e5a65c2f81959bf5d51.json  query-12719720e3f31fc91582e726851a8f27ee5333db42c5d970cf27314d01ce2a7f.json  query-133da430017daab59d5129275dc3fec5d3d91ee94e1aa963426868061d9fb094.json  query-1482d0b7ee9b978231a2c50213e76220519c68e8cbd14ade0ba9ed628b776058.json  query-1559aa1cc6a9608a4ad5557d25a350fe284efbf064d1e586146485e279549874.json  query-196e6d0e07716dac64c02932819820ce6e88479b87ccd2f96493e088f085aa0e.json  query-1bf3b10c014284fe8c3b0d5881ddb5e7d7ab9826b59969782520048a085e5cd6.json  query-1f2cd7ab5715150e6a69c89c68650113442a798a5ac2d3777a4c9ada073eb9dd.json  query-222fd261702edd5b919fefafdefbf0e5fe9c93a1b997a65292cd0ba7f25434cc.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-286f50d427344a7a5bbe37a97d4b9b5358a8a0c431101430d44ccc468237ed5d.json  query-2b15517f0480f5b5114724c0d43caa82d4a0721bd631065bed83cccb4483720e.json  query-3393b413a849e4858a3c76544eaf69cb23525f0efa7943951b37800d8eecb507.json  query-34f53caab03e0cb68d05e582d630339ecfc41a925d477241a150455a4d120cb3.json  query-3756d214b8af58d9bb687d422b7c56cf80e69334be19e500dc3f75d782c7cb31.json  query-3af42c5369baa7712e8b36ef131ec771a3155b9553284b43d563b982700f0916.json  query-3b9b8175e1c27ef5ef796213f67eede8bd2a99b0da0d227b011de41d59eaee6e.json  query-4286e0e31d03d3f0dbb666b7b9d73dddaf38fc3e93b579146d6b645b66d5f551.json  query-46c63cd08620a30eb500fe428cb1a150fbf71895b5d219178c86ccbbe543b010.json  query-50c2c0b7d8967f71ae671091261fa818314a1458ce4a3fa0483430404834af9d.json  query-543091d903cc7bc9f45d93321a693ecda88f5085b91eab91178f5e2f67c0ec05.json  query-55b7a371b35001542d789a3190e9d37109cdb3ac0461d15aad198dec49bd591f.json  query-5af144a5deb2915efa00aa33a258956faf29e3f7d81d6e56d7179f8a2fe3a76e.json  query-5f7c6515b904b3ba0747f29841fc55c5fd972d04d318601c1bdfeae6b27dc824.json  query-61739082e174356dac5136f4a2f71d814da4169523a220821da0b6b14f5436d9.json  query-649ca7ac74e88306e60f9ab9647b3b5901d94db8c285177fb54d4982fffdefdf.json  query-69524763372c391b58bbe92767614d2e41848c8737436417aa578fb9b9e4a8d7.json  query-6a2e55328466528bcd03a31c2d344d14668fca1354069e9c79f7cb084cebb368.json  query-6af494ee16b69a9c3ff731b5fb8040d8d1a425c399792769be125f4d06ee3c95.json  query-6bfff5785fcd764d27f44294d6c67314506c8bd5742ea929ae04f2bdc4687056.json  query-7a28d0ce347fcdcd9289c4cfafc7ab07b057465db4b1fd0609ccb0a1c0d200ab.json  query-7c4f65ba44314df69ee660e19f001357e41dac507476767a945e34e9eb514442.json  query-7dd33542f58919617b8b64a5910ee4d58c97267f82e746cb579e5fba8ff6937b.json  query-810ebdda9fd2f727dfe0d9a1988066b6ca5dbf8829577fac85f0a157c542e69a.json  (+32 more)
backend/media/: .gitignore
backend/sql/: schema.sql
backend/sql/migrations/: 004_add_vacation_notification_support.sql  005_add_role_holiday_groups.sql  006_migrate_holiday_roles.sql  008_add_vacation_cancellation_status.sql  20240630_add_can_add_permission.sql  20240731_add_checkbox_field_type.sql
backend/sql/updates/: add_display_order_to_custom_pages.sql  add_icon_type_and_image_path.sql
backend/src/: auth.rs  cache.rs  db.rs  macros.rs  main.rs
backend/src/handlers/: acknowledgment_handlers.rs  admin_vacation_handlers.rs  calendar_handlers.rs  contract_handlers.rs  custom_page_handlers.rs  field_handlers.rs  mod.rs  notification_handlers.rs  radiological_protection_handlers.rs  record_handlers.rs  role_handlers.rs  user_handlers.rs  vacation_handlers.rs  (+1 more)
frontend/: package.json  (+5 more)
(+201 files in other folders)
