[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = { version = "0.7", default-features = false, features = [
    "derive",
] }
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4"
ahash = "0.8"
argon2-kdf = { git = "https://github.com/lucascompython/argon2-kdf", branch = "main" }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "now",
    "serde",
] }
env_logger = { version = "0.11", optional = true }
futures-core = "0.3"
futures-util = "0.3"
mimalloc = "0.1.43"
papaya = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.4"
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["macros"] }

[features]
default = []
log = ["env_logger"]


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
