[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = { version = "0.7", default-features = false, features = [
    "derive",
] }
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
ahash = "0.8"
argh = { version = "0.1", default-features = false, features = ["help"] }
argon2-kdf = { git = "https://github.com/lucascompython/argon2-kdf", branch = "main" }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "now",
    "serde",
] }
env_logger = { version = "0.11" }
futures-core = "0.3"
futures-util = "0.3"
mimalloc = "0.1"
papaya = { version = "0.2", features = ["serde"] }
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.4"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["macros"] }


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
