[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = { version = "0.7", default-features = false, features = [
    "derive",
] }
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = { version = "4", features = ["rustls-0_23"] }
ahash = "0.8"
argh = { version = "0.1", default-features = false, features = ["help"] }
argon2-kdf = "1.6"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "now",
    "serde",
] }
env_logger = { version = "0.11" }
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
mimalloc = "0.1"
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "json",
    "chrono",
] }
tokio = { version = "1", features = ["macros"] }

[features]
deafult = []
https = ["rustls", "rustls-pemfile"]


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[profile.dev]
debug = 0
strip = true
